# agent-arc-status

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml  release-npm.yml  release-pypi.yml
conformance/: README.md  manifest.json
conformance/examples/: streams.json
conformance/runners/python/: run_conformance.py
conformance/schema/: case.schema.json
conformance/scripts/: generate-corpus.mjs
conformance/sequence/: blocked-rules.json  options.json  phase-ordering.json  valid.json
conformance/single-event/: divergences.json  extensions.json  field-constraints.json  schema-invalid.json  valid.json
docs/: adoption.md  comparison.md  design-rationale.md  motivation.md  releasing.md
examples/: 02-feature-build.jsonl  03-long-autonomous.jsonl  04-blocked-and-resumed.jsonl  05-terminal-blocked.jsonl  README.md
reference/node/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
reference/node/src/: cadence.ts  index.ts  state.ts  types.ts  validate.ts
reference/node/tests/: cadence.test.ts  parse.test.ts  schema-equivalence.test.ts  state.test.ts  validate.test.ts
reference/python/: README.md  pyproject.toml
reference/python/src/agent_arc_status/: __init__.py  cadence.py  forest.py  parse.py  render.py  state.py  types.py  validate.py
reference/python/tests/: conftest.py  test_cadence.py  test_conformance.py  test_forest.py  test_parse.py  test_render.py  test_schema_equivalence.py  test_state.py
spec/: schema.json  v0.2.md
