[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-arc-status"
version = "0.3.0"
description = "Reference implementation of the Agent Arc Status Protocol: types, parser, validator, renderer, cadence, state, and delegation-tree tooling. Zero runtime dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Joe Fisher" }]
keywords = ["agent", "agents", "ai", "llm", "observability", "progress", "webhook", "arc-status"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/joethefisher/agent-arc-status#readme"
Repository = "https://github.com/joethefisher/agent-arc-status.git"
Issues = "https://github.com/joethefisher/agent-arc-status/issues"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "jsonschema"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_arc_status"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
